@@ -6,4 +6,6 @@ fusexmp_fh
 null
 hello
 hello_ll
+fioc
+fioclient
 .libs
